test/macro/fail/importAtom.em
# Import atom where that's meaningless

# Arg: --ast2
# Expect failure

import.a
